--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ header {
 }
 
 .item:not(:last-child) {
-  margin-right: 30px;
+  margin-right: 50px;
 }
 
 .link-text {
@@ -93,6 +93,10 @@ header {
   display: flex;
   margin: 0;
   padding-left: 0;
+}
+
+.item-mail {
+  margin-right: 50px;
 }
 
 .link-contacts {
@@ -353,6 +357,7 @@ button:focus {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  background: #ffffff;
 }
 
 .person:not(:last-child) {
