--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ header {
 }
 
 .item:not(:last-child) {
-  margin-right: 50px;
+  margin-right: 30px;
 }
 
 .link-text {
@@ -389,6 +389,7 @@ button:focus {
 }
 
 .icons-commands {
+  padding-bottom: 30px;
   display: flex;
   justify-content: center;
   padding-left: 0;
